--- a/css/project.css
+++ b/css/project.css
@@ -1,10 +1,3 @@
-/*
-#hero {
-  height: 80vh;
-  background: url(".|||||||||||||||||||||||./img_7448.jpg") ;
-  background-size: cover;
-  padding-top: 20px;
-}*/
 * {
 	margin: 0;
 	width: auto;
@@ -14,14 +7,21 @@ body {
 	font-family: "Source Sans Pro", sans-serif;
 	font-size: 37px;
 	line-height: 1.5;
-  margin-top: 209px;
-	max-width: 1500px;
+    margin-top: 209px;
 }
+
 p  	{
 	margin: 0 0 1.5em 0;
 
 
 }
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+}
+
 .button {
   font-family: "Oswald", sans-serif;
   text-decoration: none;
@@ -196,16 +196,16 @@ footer h4 {
 }
 
 @media only screen and (max-width: 1000px){
-  
- 
+
+
   h1 {
-    font-size: 95%; 
+    font-size: 95%;
   }
   header h2 {
     font-size: 75%;
     color: orange;
   }
-  
+
   #innernav a {
     font-size: .75em;
   }
@@ -249,7 +249,7 @@ footer h4 {
     }
     .you p {
       font-size: 38%;
-      
+
     }
     .we p {
       font-size: 38%;
@@ -331,16 +331,3 @@ footer h4 {
 @media only screen and (min-width: 400px){}
 
 /*@media only screen and (max-width: 1500px){}*/
-
-
-
-
-
-
-
-
-
-
-
-
-
