--- a/css/project.css
+++ b/css/project.css
@@ -93,7 +93,6 @@ nav {
 
 nav a {
   padding: 0 .3em;
-  display: none;
 }
 
 nav.visible a {
@@ -113,7 +112,7 @@ nav strong {
   text-transform: uppercase;
 }
 
-nav  a#hamburger {
+nav a#hamburger {
   display: none;
   padding: 6px 24px;
   background-color: red;
@@ -121,18 +120,21 @@ nav  a#hamburger {
 
 .tagline {
   background-color: skyblue;
- /* background: #C6C6C6;   */
   border-top: 1px solid #AAA;
   font-family: "Merriweather", serif;
   text-align: center;
   margin: 0;
-  padding: 0em 3%;
+  padding: 20px;
   font-size: 1em;
   line-height: 1;
   font-style: italic;
   clear: both;
-  display: none;
 }
+
+.tagline.hidden {
+    display: none;
+}
+
 .blurb {
   background: rgba(255, 255, 255, .8);
   width: 34%;
@@ -178,9 +180,13 @@ nav  a#hamburger {
   background: url("../images/img_7463.jpg") center center no-repeat;
   max-height: 427px;
 }
-.merg {
+.emergency-text {
   color: red;
 }
+.rate:hover .emergency-text {
+    color: purple;
+}
+
 .fixtoilet {
   background-color: pink;
   padding: 3%;
@@ -201,8 +207,6 @@ footer h4 {
 }
 
 @media only screen and (max-width: 1000px){
-
-
   h1 {
     font-size: 95%;
   }
@@ -210,12 +214,8 @@ footer h4 {
     font-size: 75%;
     color: orange;
   }
-
-  #innernav a {
-    font-size: .75em;
-  }
   body {
-    margin-top: 147px;
+    margin-top: 160px;
   }
   .blurb a {
     font-size: 50%;
@@ -240,11 +240,8 @@ footer h4 {
     #page-header h2 {
       font-size: 50%;
     }
-   #innernav {
-    font-size: 50%;
-    }
     body {
-    margin-top: 119px;
+        margin-top: 119px;
     }
     .callouts {
       max-height: 540;
@@ -289,6 +286,9 @@ footer h4 {
    nav {
     width: 100%
    }
+   nav a {
+       display: none;
+   }
    nav a#hamburger {
       display: block;
       text-align: center;
@@ -296,23 +296,6 @@ footer h4 {
       right: 0;
       top: 0;
       position: absolute;
-  }
-  nav #innernav {
-    position: absolute;
-    width: 94%;
-    background-color: red;
-  }
- nav #innernav a {
-    text-align: center;
-    width: auto;
-    padding: 1em;
-    border-bottom: solid 1px blue;
-    border-right: none;
-    float: none;
-    display: none;
-  }
-  nav:hover #innernav a {
-    display: block;
   }
   .callout {
     float: none;
