--- a/css/project.css
+++ b/css/project.css
@@ -11,11 +11,8 @@ body {
 }
 
 p  	{
-	margin: 0 0 1.5em 0;
-
-
+  margin: 0 0 1.5em 0;
 }
-
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -183,8 +180,8 @@ nav a#hamburger {
 .emergency-text {
   color: red;
 }
-.rate:hover .emergency-text {
-    color: purple;
+.callouts:hover .emergency-text {
+    color: yellow;
 }
 
 .fixtoilet {
@@ -230,6 +227,10 @@ background-color: #666;
 }*/
 
 @media only screen and (max-width: 1000px){
+      
+  nav {
+    font-size: 50%;
+  }
   h1 {
     font-size: 95%;
   }
@@ -238,7 +239,10 @@ background-color: #666;
     color: orange;
   }
   body {
-    margin-top: 160px;
+    margin-top: 133px;
+  }
+  p {
+    font-size: 50%;
   }
   .blurb a {
     font-size: 50%;
@@ -248,6 +252,7 @@ background-color: #666;
   }
 }
 @media only screen and (max-width: 850px){
+
     .blurb {
     float: none;
     width: 93%;
@@ -323,7 +328,7 @@ background-color: #666;
   .callout {
     float: none;
     width: 100%;
-   min-height: 100px;
+    min-height: 100px;
   }
   .callouts h3 {
     font-size: 50%;
