--- a/css/project.css
+++ b/css/project.css
@@ -31,7 +31,7 @@ p  	{
   text-align: center;
   padding: .5em;
   box-shadow: inset 0 -5px 0 rgba(0, 0, 0, .2);
-  border-radiwe: .25em;
+  border-radius: .25em;
 }
 #only {
   font-family: fantasy;
@@ -131,7 +131,9 @@ nav a#hamburger {
 .tagline.hidden {
     display: none;
 }
-
+.skunk {
+  float:left;
+}
 .blurb {
   background: rgba(255, 255, 255, .8);
   width: 34%;
@@ -217,6 +219,7 @@ footer h4 {
 	opacity: .8;
 }
 
+
 /*.featherlight .featherlight-content {
 background-color: #666;
 }
@@ -243,6 +246,7 @@ background-color: #666;
   }
   p {
     font-size: 50%;
+    margin: 1cm 1cm;
   }
   .blurb a {
     font-size: 50%;
@@ -252,7 +256,9 @@ background-color: #666;
   }
 }
 @media only screen and (max-width: 850px){
-
+    .skunk {
+      display: none;
+    }
     .blurb {
     float: none;
     width: 93%;
